Remove margin from header-container to fix extra white space on top of page issue

--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -5,7 +5,8 @@
 }
 
 body {
-
+  width: 100%;
+  height: 100%;
   font-family: "Bayon", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -18,15 +19,15 @@ body {
   height: 100vh;
   background-color:#f0f8ff
   
+  
 }
 
 .header-container{
-  margin: 1rem;
   padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
+  color: black;
   font-size: 2.5rem;
 
 }
